node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-auth-deployment
spec:
  selector:
    matchLabels:
      app: ec-auth
  replicas: 2
  template:
    metadata:
      labels:
        app: ec-auth
    spec:
      containers:
      - name: ec-auth
        image: joeyfontys/s6-ec-auth
        ports:
        - containerPort: 3001
