mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 3306
  selector:
    app: mysql
