mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: mysql
spec:
  rules:
  - host: test.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: mysql
            port:
              number: 3306
